--- a/.github/workflows/pages-build.yml
+++ b/.github/workflows/pages-build.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           cd src
           npm install
-          npm build
+          npm run build
           cd ..
   
       - name: Setup Pages
